# FistOfRhalgr

./: CMakeLists.txt  DataConversion.hpp  RhalgrGui.cpp  RhalgrGui.hpp  RhalgrMemory.cpp  RhalgrMemory.hpp  RhalgrNetwork.cpp  RhalgrNetwork.hpp  SkillCodes.hpp  StatusEffectCodes.hpp  conanfile.txt  conaninfo.txt  main.cpp
test/: RhalgrNetworkTest.cpp
